<resources>
    <string name="app_name">ActvityLifecycle</string>
    <string name="co_ed">Co-Ed</string>
    <string name="womens">Women</string>
    <string name="mens">Men</string>
    <string name="desired_league">Desired League</string>
    <string name="next">Next</string>
    <string name="background_image">Background Image</string>
    <string name="logo">LOGO</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="string_baller">string/baller</string>
    <string name="i_am_a">I am a</string>
    <string name="finish">FINISH</string>
</resources>
